<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_middle"
        app:cardCornerRadius="6.0dip"
        app:cardElevation="5.0dip">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:text="@string/reset_password_title" />
            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_upper" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailPasswordRecovery"
                android:theme="@style/EditText.Grey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="50"
                android:inputType="text" />
            <View
                android:layout_width="0.0dip"
                android:layout_height="@dimen/spacing_mlarge" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:theme="@style/Checkbox.Blue"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginRight="-4.0dip"
                android:text="@string/reset_password_accept_email" />
            <View
                android:layout_width="0.0dip"
                android:layout_height="@dimen/spacing_mlarge" />
            <Button
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rounded_primary"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:text="@string/reset_password_button"
                android:textAllCaps="false"
                android:enabled="false"
                android:onClick="recoverPassword"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium">
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/light_slate_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:paddingRight="5sp"/>
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryLight"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:onClick="loginChange"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>